--- a/source/catalog.html
+++ b/source/catalog.html
@@ -53,7 +53,7 @@
   <main class="page-main">
     <section class="catalog">
       <div class="catalog__container">
-        <h1 class="catalog__title">Каталог товаров</h1>
+        <h1 class="catalog__title">Каталог продукции</h1>
         <ul class="catalog__list">
           <li class="catalog__item product-card">
             <a href="#" class="product-card__link">
@@ -62,19 +62,23 @@
                 <img class="product-card__image" src="img/can1-small-mobile.png" alt="Cat Energy Pro 500">
               </picture>
             </a>
-            <div class="product-card__title">
-            <a href="#" class="product-card__name">Cat Energy Pro 500 г</a>
+            <div class="product-card__description">
+              <div class="product-card__title">
+              <a href="#" class="product-card__name">Cat Energy Pro 500 г</a>
+              </div>
+              <div class="product-card__info product-card__info--weight">
+                <span>Масса</span><span>500 г</span>
+              </div>
+              <div class="product-card__info product-card__info--taste">
+                <span>Вкус</span><span>Курица</span>
+              </div>
+              <div class="product-card__info product-card__info--price">
+                <span>Цена</span><span>700 р.</span>
+              </div>
             </div>
-            <div class="product-card__info product-card__info--weight">
-              <span>Масса</span><span>500 г</span>
+            <div class="product-card__button">
+              <a href="" class="button">Заказать</a>
             </div>
-            <div class="product-card__info product-card__info--taste">
-              <span>Вкус</span><span>Курица</span>
-            </div>
-            <div class="product-card__info product-card__info--price">
-              <span>Цена</span><span>700 р.</span>
-            </div>
-            <a href="" class="product-card__button button">Заказать</a>
           </li>
           <li class="catalog__item product-card">
             <a href="#" class="product-card__link">
@@ -83,19 +87,23 @@
                 <img class="product-card__image" src="img/can1-big-mobile.png" alt="Cat Energy Pro 1000">
               </picture>
             </a>
-            <div class="product-card__title">
-              <a href="#" class="product-card__name">Cat Energy Pro 1000 г</a>
+            <div class="product-card__description">
+              <div class="product-card__title">
+                <a href="#" class="product-card__name">Cat Energy Pro 1000 г</a>
+              </div>
+              <div class="product-card__info product-card__info--weight">
+                <span>Масса</span><span>1000 г</span>
+              </div>
+              <div class="product-card__info product-card__info--taste">
+                <span>Вкус</span><span>Курица</span>
+              </div>
+              <div class="product-card__info product-card__info--price">
+                <span>Цена</span><span>1000 р.</span>
+              </div>
             </div>
-            <div class="product-card__info product-card__info--weight">
-              <span>Масса</span><span>1000 г</span>
+            <div class="product-card__button">
+              <a href="" class="button">Заказать</a>
             </div>
-            <div class="product-card__info product-card__info--taste">
-              <span>Вкус</span><span>Курица</span>
-            </div>
-            <div class="product-card__info product-card__info--price">
-              <span>Цена</span><span>1000 р.</span>
-            </div>
-            <a href="" class="product-card__button button">Заказать</a>
           </li>
           <li class="catalog__item product-card">
             <a href="#" class="product-card__link">
@@ -104,19 +112,23 @@
                 <img class="product-card__image" src="img/can2-small-mobile.png" alt="Cat Energy Pro 500">
               </picture>
             </a>
-            <div class="product-card__title">
-            <a href="#" class="product-card__name">Cat Energy Pro 500 г</a>
+            <div class="product-card__description">
+              <div class="product-card__title">
+              <a href="#" class="product-card__name">Cat Energy Pro 500 г</a>
+              </div>
+              <div class="product-card__info product-card__info--weight">
+                <span>Масса</span><span>500 г</span>
+              </div>
+              <div class="product-card__info product-card__info--taste">
+                <span>Вкус</span><span>Рыба</span>
+              </div>
+              <div class="product-card__info product-card__info--price">
+                <span>Цена</span><span>700 р.</span>
+              </div>
             </div>
-            <div class="product-card__info product-card__info--weight">
-              <span>Масса</span><span>500 г</span>
+            <div class="product-card__button">
+              <a href="" class="button">Заказать</a>
             </div>
-            <div class="product-card__info product-card__info--taste">
-              <span>Вкус</span><span>Рыба</span>
-            </div>
-            <div class="product-card__info product-card__info--price">
-              <span>Цена</span><span>700 р.</span>
-            </div>
-            <a href="" class="product-card__button button">Заказать</a>
           </li>
           <li class="catalog__item product-card">
             <a href="#" class="product-card__link">
@@ -125,19 +137,23 @@
                 <img class="product-card__image" src="img/can2-big-mobile.png" alt="Cat Energy Pro 1000">
               </picture>
             </a>
-            <div class="product-card__title">
-              <a href="#" class="product-card__name">Cat Energy Pro 1000 г</a>
+            <div class="product-card__description">
+              <div class="product-card__title">
+                <a href="#" class="product-card__name">Cat Energy Pro 1000 г</a>
+              </div>
+              <div class="product-card__info product-card__info--weight">
+                <span>Масса</span><span>1000 г</span>
+              </div>
+              <div class="product-card__info product-card__info--taste">
+                <span>Вкус</span><span>Рыба</span>
+              </div>
+              <div class="product-card__info product-card__info--price">
+                <span>Цена</span><span>1000 р.</span>
+              </div>
             </div>
-            <div class="product-card__info product-card__info--weight">
-              <span>Масса</span><span>1000 г</span>
+            <div class="product-card__button">
+              <a href="" class="button">Заказать</a>
             </div>
-            <div class="product-card__info product-card__info--taste">
-              <span>Вкус</span><span>Рыба</span>
-            </div>
-            <div class="product-card__info product-card__info--price">
-              <span>Цена</span><span>1000 р.</span>
-            </div>
-            <a href="" class="product-card__button button">Заказать</a>
           </li>
           <li class="catalog__item product-card">
             <a href="#" class="product-card__link">
@@ -146,19 +162,23 @@
                 <img class="product-card__image" src="img/can3-small-mobile.png" alt="Cat Energy Pro 500">
               </picture>
             </a>
-            <div class="product-card__title">
-            <a href="#" class="product-card__name">Cat Energy Pro 500 г</a>
+            <div class="product-card__description">
+              <div class="product-card__title">
+              <a href="#" class="product-card__name">Cat Energy Pro 500 г</a>
+              </div>
+              <div class="product-card__info product-card__info--weight">
+                <span>Масса</span><span>500 г</span>
+              </div>
+              <div class="product-card__info product-card__info--taste">
+                <span>Вкус</span><span>Гречка</span>
+              </div>
+              <div class="product-card__info product-card__info--price">
+                <span>Цена</span><span>700 р.</span>
+              </div>
             </div>
-            <div class="product-card__info product-card__info--weight">
-              <span>Масса</span><span>500 г</span>
+            <div class="product-card__button">
+              <a href="" class="button">Заказать</a>
             </div>
-            <div class="product-card__info product-card__info--taste">
-              <span>Вкус</span><span>Гречка</span>
-            </div>
-            <div class="product-card__info product-card__info--price">
-              <span>Цена</span><span>700 р.</span>
-            </div>
-            <a href="" class="product-card__button button">Заказать</a>
           </li>
           <li class="catalog__item product-card">
             <a href="#" class="product-card__link">
@@ -167,19 +187,23 @@
                 <img class="product-card__image" src="img/can3-big-mobile.png" alt="Cat Energy Pro 1000">
               </picture>
             </a>
-            <div class="product-card__title">
-              <a href="#" class="product-card__name">Cat Energy Pro 1000 г</a>
+            <div class="product-card__description">
+              <div class="product-card__title">
+                <a href="#" class="product-card__name">Cat Energy Pro 1000 г</a>
+              </div>
+              <div class="product-card__info product-card__info--weight">
+                <span>Масса</span><span>1000 г</span>
+              </div>
+              <div class="product-card__info product-card__info--taste">
+                <span>Вкус</span><span>Гречка</span>
+              </div>
+              <div class="product-card__info product-card__info--price">
+                <span>Цена</span><span>1000 р.</span>
+              </div>
             </div>
-            <div class="product-card__info product-card__info--weight">
-              <span>Масса</span><span>1000 г</span>
+            <div class="product-card__button">
+              <a href="" class="button">Заказать</a>
             </div>
-            <div class="product-card__info product-card__info--taste">
-              <span>Вкус</span><span>Гречка</span>
-            </div>
-            <div class="product-card__info product-card__info--price">
-              <span>Цена</span><span>1000 р.</span>
-            </div>
-            <a href="" class="product-card__button button">Заказать</a>
           </li>
           <li class="catalog__item product-card">
             <a href="#" class="product-card__link">
@@ -188,19 +212,23 @@
                 <img class="product-card__image" src="img/can4-small-mobile.png" alt="Cat Energy Pro 500">
               </picture>
             </a>
-            <div class="product-card__title">
-            <a href="#" class="product-card__name">Cat Energy Pro 500 г</a>
+            <div class="product-card__description">
+              <div class="product-card__title">
+              <a href="#" class="product-card__name">Cat Energy Pro 500 г</a>
+              </div>
+              <div class="product-card__info product-card__info--weight">
+                <span>Масса</span><span>500 г</span>
+              </div>
+              <div class="product-card__info product-card__info--taste">
+                <span>Вкус</span><span>Рис</span>
+              </div>
+              <div class="product-card__info product-card__info--price">
+                <span>Цена</span><span>700 р.</span>
+              </div>
             </div>
-            <div class="product-card__info product-card__info--weight">
-              <span>Масса</span><span>500 г</span>
+            <div class="product-card__button">
+              <a href="" class="button">Заказать</a>
             </div>
-            <div class="product-card__info product-card__info--taste">
-              <span>Вкус</span><span>Рис</span>
-            </div>
-            <div class="product-card__info product-card__info--price">
-              <span>Цена</span><span>700 р.</span>
-            </div>
-            <a href="" class="product-card__button button">Заказать</a>
           </li>
           <li class="catalog__item product-card product-card--show-more">
             <div class="product-card__plus"></div>
