--- a/source/catalog.html
+++ b/source/catalog.html
@@ -54,8 +54,10 @@
     <section class="catalog">
       <div class="catalog__container">
         <h1 class="catalog__title">Каталог продукции</h1>
-        <ul class="catalog__list">
-          <li class="catalog__item product-card">
+      </div>
+      <ul class="catalog__list">
+        <li class="catalog__item product-card">
+          <div class="product-card__inner">
             <a href="#" class="product-card__link">
               <picture>
                 <source media="(min-width: 768px)" srcset="img/can1-small-desktop.png">
@@ -64,7 +66,7 @@
             </a>
             <div class="product-card__description">
               <div class="product-card__title">
-              <a href="#" class="product-card__name">Cat Energy Pro 500 г</a>
+              <a href="#" class="product-card__name">Cat Energy <br class="br-mobile">Pro <br class="br-not-mobile">500 г</a>
               </div>
               <div class="product-card__info product-card__info--weight">
                 <span>Масса</span><span>500 г</span>
@@ -79,8 +81,10 @@
             <div class="product-card__button">
               <a href="" class="button">Заказать</a>
             </div>
-          </li>
-          <li class="catalog__item product-card">
+          </div>
+        </li>
+        <li class="catalog__item product-card">
+          <div class="product-card__inner">
             <a href="#" class="product-card__link">
               <picture>
                 <source media="(min-width: 768px)" srcset="img/can1-big-desktop.png">
@@ -89,7 +93,7 @@
             </a>
             <div class="product-card__description">
               <div class="product-card__title">
-                <a href="#" class="product-card__name">Cat Energy Pro 1000 г</a>
+                <a href="#" class="product-card__name">Cat Energy <br class="br-mobile">Pro <br class="br-not-mobile">1000 г</a>
               </div>
               <div class="product-card__info product-card__info--weight">
                 <span>Масса</span><span>1000 г</span>
@@ -104,8 +108,10 @@
             <div class="product-card__button">
               <a href="" class="button">Заказать</a>
             </div>
-          </li>
-          <li class="catalog__item product-card">
+          </div>
+        </li>
+        <li class="catalog__item product-card">
+          <div class="product-card__inner">
             <a href="#" class="product-card__link">
               <picture>
                 <source media="(min-width: 768px)" srcset="img/can2-small-desktop.png">
@@ -114,7 +120,7 @@
             </a>
             <div class="product-card__description">
               <div class="product-card__title">
-              <a href="#" class="product-card__name">Cat Energy Pro 500 г</a>
+              <a href="#" class="product-card__name">Cat Energy <br class="br-mobile">Pro <br class="br-not-mobile">500 г</a>
               </div>
               <div class="product-card__info product-card__info--weight">
                 <span>Масса</span><span>500 г</span>
@@ -129,8 +135,10 @@
             <div class="product-card__button">
               <a href="" class="button">Заказать</a>
             </div>
-          </li>
-          <li class="catalog__item product-card">
+          </div>
+        </li>
+        <li class="catalog__item product-card">
+          <div class="product-card__inner">
             <a href="#" class="product-card__link">
               <picture>
                 <source media="(min-width: 768px)" srcset="img/can2-big-desktop.png">
@@ -139,7 +147,7 @@
             </a>
             <div class="product-card__description">
               <div class="product-card__title">
-                <a href="#" class="product-card__name">Cat Energy Pro 1000 г</a>
+                <a href="#" class="product-card__name">Cat Energy <br class="br-mobile">Pro <br class="br-not-mobile">1000 г</a>
               </div>
               <div class="product-card__info product-card__info--weight">
                 <span>Масса</span><span>1000 г</span>
@@ -154,8 +162,10 @@
             <div class="product-card__button">
               <a href="" class="button">Заказать</a>
             </div>
-          </li>
-          <li class="catalog__item product-card">
+          </div>
+        </li>
+        <li class="catalog__item product-card">
+          <div class="product-card__inner">
             <a href="#" class="product-card__link">
               <picture>
                 <source media="(min-width: 768px)" srcset="img/can3-small-desktop.png">
@@ -164,7 +174,7 @@
             </a>
             <div class="product-card__description">
               <div class="product-card__title">
-              <a href="#" class="product-card__name">Cat Energy Pro 500 г</a>
+              <a href="#" class="product-card__name">Cat Energy <br class="br-mobile">Pro <br class="br-not-mobile">500 г</a>
               </div>
               <div class="product-card__info product-card__info--weight">
                 <span>Масса</span><span>500 г</span>
@@ -179,8 +189,10 @@
             <div class="product-card__button">
               <a href="" class="button">Заказать</a>
             </div>
-          </li>
-          <li class="catalog__item product-card">
+          </div>
+        </li>
+        <li class="catalog__item product-card">
+          <div class="product-card__inner">
             <a href="#" class="product-card__link">
               <picture>
                 <source media="(min-width: 768px)" srcset="img/can3-big-desktop.png">
@@ -189,7 +201,7 @@
             </a>
             <div class="product-card__description">
               <div class="product-card__title">
-                <a href="#" class="product-card__name">Cat Energy Pro 1000 г</a>
+                <a href="#" class="product-card__name">Cat Energy <br class="br-mobile">Pro <br class="br-not-mobile">1000 г</a>
               </div>
               <div class="product-card__info product-card__info--weight">
                 <span>Масса</span><span>1000 г</span>
@@ -204,8 +216,10 @@
             <div class="product-card__button">
               <a href="" class="button">Заказать</a>
             </div>
-          </li>
-          <li class="catalog__item product-card">
+          </div>
+        </li>
+        <li class="catalog__item product-card">
+          <div class="product-card__inner">
             <a href="#" class="product-card__link">
               <picture>
                 <source media="(min-width: 768px)" srcset="img/can4-small-desktop.png">
@@ -214,7 +228,7 @@
             </a>
             <div class="product-card__description">
               <div class="product-card__title">
-              <a href="#" class="product-card__name">Cat Energy Pro 500 г</a>
+              <a href="#" class="product-card__name">Cat Energy <br class="br-mobile">Pro <br class="br-not-mobile">500 г</a>
               </div>
               <div class="product-card__info product-card__info--weight">
                 <span>Масса</span><span>500 г</span>
@@ -229,78 +243,81 @@
             <div class="product-card__button">
               <a href="" class="button">Заказать</a>
             </div>
-          </li>
-          <li class="catalog__item product-card product-card--show-more">
+          </div>
+        </li>
+        <li class="catalog__item product-card product-card--show-more">
+          <div class="product-card__inner">
             <div class="product-card__plus"></div>
             <div class="product-card__title">
-              <span class="product-card__text">Показать еще 100500 товаров</span>
-              <small class="product-card__note">На самом деле вкусов гораздо больше!</small>
+              <span class="product-card__text">Показать еще <br class="br-not-mobile">100500 товаров</span>
+              <small class="product-card__note">На самом деле вкусов <br class="br-not-mobile">гораздо больше!</small>
             </div>
             <a href="" class="product-card__button button button--grey">Показать все</a>
+          </div>
+        </li>
+      </ul>
+      <div class="catalog__container">
+      <h2 class="catalog__subtitle">Дополнительные товары</h2>
+      <div class="catalog-extra">
+        <ul class="catalog-extra__list">
+          <li class="catalog-extra__item">
+          <div class="product-card-extra">
+            <div class="product-card-extra__name">
+              <span>Сахарозаменитель</span>
+            </div>
+            <div class="product-card-extra__weight">
+              <span>1 упаковка (100г)</span>
+            </div>
+            <div class="product-card-extra__price">
+              <span>200 Р.</span>
+            </div>
+            <a href="" class="product-card-extra__link button">Заказать</a>
+          </div>
+          </li>
+          <li class="catalog-extra__item">
+          <div class="product-card-extra">
+            <div class="product-card-extra__name">
+              <span>Питьевая вода</span>
+            </div>
+            <div class="product-card-extra__weight">
+              <span>5 литров</span>
+            </div>
+            <div class="product-card-extra__price">
+              <span>50 Р.</span>
+            </div>
+            <a href="" class="product-card-extra__link button">Заказать</a>
+          </div>
+          </li> <li class="catalog-extra__item">
+          <div class="product-card-extra">
+            <div class="product-card-extra__name">
+              <span>Молоко</span>
+            </div>
+            <div class="product-card-extra__weight">
+              <span>1 литр</span>
+            </div>
+            <div class="product-card-extra__price">
+              <span>100 Р.</span>
+            </div>
+            <a href="" class="product-card-extra__link button">Заказать</a>
+          </div>
+          </li>
+          <li class="catalog-extra__item">
+          <div class="product-card-extra">
+            <div class="product-card-extra__name">
+              <span>Витамины</span>
+            </div>
+            <div class="product-card-extra__weight">
+              <span>1 упаковка (30г)</span>
+            </div>
+            <div class="product-card-extra__price">
+              <span>300 Р.</span>
+            </div>
+            <a href="" class="product-card-extra__link button">Заказать</a>
+          </div>
           </li>
         </ul>
-        <h2 class="catalog__subtitle">Дополнительные товары</h2>
-        <div class="catalog-extra">
-          <ul class="catalog-extra__list">
-            <li class="catalog-extra__item">
-            <div class="product-card-extra">
-              <div class="product-card-extra__name">
-                <span>Сахарозаменитель</span>
-              </div>
-              <div class="product-card-extra__weight">
-                <span>1 упаковка (100г)</span>
-              </div>
-              <div class="product-card-extra__price">
-                <span>200 Р.</span>
-              </div>
-              <a href="" class="product-card-extra__link button">Заказать</a>
-            </div>
-            </li>
-            <li class="catalog-extra__item">
-            <div class="product-card-extra">
-              <div class="product-card-extra__name">
-                <span>Питьевая вода</span>
-              </div>
-              <div class="product-card-extra__weight">
-                <span>5 литров</span>
-              </div>
-              <div class="product-card-extra__price">
-                <span>50 Р.</span>
-              </div>
-              <a href="" class="product-card-extra__link button">Заказать</a>
-            </div>
-            </li> <li class="catalog-extra__item">
-            <div class="product-card-extra">
-              <div class="product-card-extra__name">
-                <span>Молоко</span>
-              </div>
-              <div class="product-card-extra__weight">
-                <span>1 литр</span>
-              </div>
-              <div class="product-card-extra__price">
-                <span>100 Р.</span>
-              </div>
-              <a href="" class="product-card-extra__link button">Заказать</a>
-            </div>
-            </li>
-            <li class="catalog-extra__item">
-            <div class="product-card-extra">
-              <div class="product-card-extra__name">
-                <span>Витамины</span>
-              </div>
-              <div class="product-card-extra__weight">
-                <span>1 упаковка (30г)</span>
-              </div>
-              <div class="product-card-extra__price">
-                <span>300 Р.</span>
-              </div>
-              <a href="" class="product-card-extra__link button">Заказать</a>
-            </div>
-            </li>
-          </ul>
-          <div class="product-promo">
-            <p class="product-promo__details">Закажите все и получите чехол для кота в подарок!</p>
-          </div>
+        <div class="product-promo">
+          <p class="product-promo__details">Закажите все и получите чехол для кота в подарок!</p>
         </div>
       </div>
     </section>
