стили блока product-promo

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -317,7 +317,7 @@
           </li>
         </ul>
         <div class="product-promo">
-          <p class="product-promo__details">Закажите все и получите чехол для кота в подарок!</p>
+          <p class="product-promo__details">Закажите все<br>и получите чехол для<br>кота в подарок!</p>
         </div>
       </div>
     </section>
