карта и подзаголовки для страницы каталога

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -256,8 +256,12 @@
           </div>
         </li>
       </ul>
+      <div class="catalog__delimiter">
+        <div class="catalog__container">
+          <h2 class="catalog__subtitle">Дополнительные товары</h2>
+        </div>
+      </div>
       <div class="catalog__container">
-      <h2 class="catalog__subtitle">Дополнительные товары</h2>
       <div class="catalog-extra">
         <ul class="catalog-extra__list">
           <li class="catalog-extra__item">
@@ -321,16 +325,16 @@
         </div>
       </div>
     </section>
-    <section class="map">
-      <div class="map__wrapper">
-        <div class="map__container">
-          <div class="map__text">
-            <p class="map__title">Приглашаем<br>к сотрудничеству<br>дилеров!</p>
-            <p class="map__address">ул. Большая<br>Конюшенная, д. 19/8<br>Санкт-Петербург</p>
-          </div>
+    <section class="map map--catalog">
+      <div class="map__container">
+        <div class="map__text">
+          <p class="map__title">Приглашаем<br>к сотрудничеству<br>дилеров!</p>
+          <p class="map__address">ул. Большая<br>Конюшенная, д. 19/8<br><br class="br-not-mobile">Санкт-Петербург</p>
         </div>
       </div>
-      <div class="map__location"></div>
+      <div class="map__location">
+        <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Afffcda3fd5ea90e254b3828f34175e22abd1b19b3d1539e1065ad215f92c420d&amp;source=constructor" width="100%" height="100%" frameborder="0"></iframe>
+      </div>
     </section>
   </main>
   <footer class="page-footer">
