Адаптивная графика для страницы каталога

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Cat Energy</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="img/favicons/32.ico">
+  <link rel="icon" href="img/favicons/favicon.svg" type="image/svg+xml">
 </head>
 <body class="page__body">
   <header class="page-header">
@@ -60,8 +63,8 @@
           <div class="product-card__inner">
             <a href="#" class="product-card__link">
               <picture>
-                <source media="(min-width: 768px)" srcset="img/can1-small-desktop.png">
-                <img class="product-card__image" src="img/can1-small-mobile.png" alt="Cat Energy Pro 500">
+                <source media="(min-width: 768px)" srcset="img/can1-small-desktop.png 1x, img/can1-small-desktop@2x.png 2x">
+                <img class="product-card__image" src="img/can1-small-mobile.png" srcset="img/can1-small-mobile@2x.png 2x" alt="Cat Energy Pro 500">
               </picture>
             </a>
             <div class="product-card__description">
@@ -87,8 +90,8 @@
           <div class="product-card__inner">
             <a href="#" class="product-card__link">
               <picture>
-                <source media="(min-width: 768px)" srcset="img/can1-big-desktop.png">
-                <img class="product-card__image" src="img/can1-big-mobile.png" alt="Cat Energy Pro 1000">
+                <source media="(min-width: 768px)" srcset="img/can1-big-desktop.png 1x, img/can1-big-desktop@2x.png 2x">
+                <img class="product-card__image" src="img/can1-big-mobile.png" srcset="img/can1-big-mobile@2x.png 2x" alt="Cat Energy Pro 1000">
               </picture>
             </a>
             <div class="product-card__description">
@@ -114,8 +117,8 @@
           <div class="product-card__inner">
             <a href="#" class="product-card__link">
               <picture>
-                <source media="(min-width: 768px)" srcset="img/can2-small-desktop.png">
-                <img class="product-card__image" src="img/can2-small-mobile.png" alt="Cat Energy Pro 500">
+                <source media="(min-width: 768px)" srcset="img/can2-small-desktop.png 1x, img/can2-small-desktop@2x.png 2x">
+                <img class="product-card__image" src="img/can2-small-mobile.png" srcset="img/can2-small-mobile@2x.png 2x" alt="Cat Energy Pro 500">
               </picture>
             </a>
             <div class="product-card__description">
@@ -141,8 +144,8 @@
           <div class="product-card__inner">
             <a href="#" class="product-card__link">
               <picture>
-                <source media="(min-width: 768px)" srcset="img/can2-big-desktop.png">
-                <img class="product-card__image" src="img/can2-big-mobile.png" alt="Cat Energy Pro 1000">
+                <source media="(min-width: 768px)" srcset="img/can2-big-desktop.png 1x, img/can2-big-desktop@2x.png 2x">
+                <img class="product-card__image" src="img/can2-big-mobile.png" srcset="img/can2-big-mobile@2x.png 2x" alt="Cat Energy Pro 1000">
               </picture>
             </a>
             <div class="product-card__description">
@@ -168,8 +171,8 @@
           <div class="product-card__inner">
             <a href="#" class="product-card__link">
               <picture>
-                <source media="(min-width: 768px)" srcset="img/can3-small-desktop.png">
-                <img class="product-card__image" src="img/can3-small-mobile.png" alt="Cat Energy Pro 500">
+                <source media="(min-width: 768px)" srcset="img/can3-small-desktop.png 1x, img/can3-small-desktop@2x.png 2x">
+                <img class="product-card__image" src="img/can3-small-mobile.png" srcset="img/can3-small-mobile@2x.png 2x" alt="Cat Energy Pro 500">
               </picture>
             </a>
             <div class="product-card__description">
@@ -195,8 +198,8 @@
           <div class="product-card__inner">
             <a href="#" class="product-card__link">
               <picture>
-                <source media="(min-width: 768px)" srcset="img/can3-big-desktop.png">
-                <img class="product-card__image" src="img/can3-big-mobile.png" alt="Cat Energy Pro 1000">
+                <source media="(min-width: 768px)" srcset="img/can3-big-desktop.png 1x, img/can3-big-desktop@2x.png 2x">
+                <img class="product-card__image" src="img/can3-big-mobile.png" srcset="img/can3-big-mobile@2x.png 2x" alt="Cat Energy Pro 1000">
               </picture>
             </a>
             <div class="product-card__description">
@@ -222,8 +225,8 @@
           <div class="product-card__inner">
             <a href="#" class="product-card__link">
               <picture>
-                <source media="(min-width: 768px)" srcset="img/can4-small-desktop.png">
-                <img class="product-card__image" src="img/can4-small-mobile.png" alt="Cat Energy Pro 500">
+                <source media="(min-width: 768px)" srcset="img/can4-small-desktop.png 1x, img/can4-small-desktop@2x.png 2x">
+                <img class="product-card__image" src="img/can4-small-mobile.png" srcset="img/can4-small-mobile@2x.png 2x" alt="Cat Energy Pro 500">
               </picture>
             </a>
             <div class="product-card__description">
