стилизация блока Живой пример

--- a/source/index.html
+++ b/source/index.html
@@ -100,11 +100,11 @@
                 <div class="example__results-data">
                   <div class="example__result">
                     <span class="example__result-big">5 кг</span>
-                    <span class="example__result-small">снижение веса</span>
+                    <span class="example__result-small">снижение<br class="br-mobile"> веса</span>
                   </div>
                   <div class="example__result">
                     <span class="example__result-big">60 дней</span>
-                    <span class="example__result-small">затрачено времени</span>
+                    <span class="example__result-small">затрачено<br class="br-mobile"> времени</span>
                   </div>
                 </div>
                 <p class="example__bill">Затраты на питание: <span class="example__bill-count">15000 руб.</span></p>
