Автоматизация сборки личного проекта

--- a/source/index.html
+++ b/source/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Cat Energy</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body class="page__body">
   <header class="page-header page-header--index">
@@ -43,7 +43,7 @@
           <picture>
             <source media="(min-width: 1440px)" srcset="img/index-can.webp 1x, img/index-can@2x.webp 2x">
             <source media="(min-width: 768px)" srcset="img/index-can-tablet.webp 1x, img/index-can-tablet@2x.webp 2x">
-            <img class="hero__img" src="img/index-can-mobile.webp" srcset="img/index-can-mobile.webp 2x" alt="cat energy">
+            <img class="hero__img" src="img/index-can-mobile.webp" srcset="img/index-can-mobile@2x.webp 2x" alt="cat energy">
           </picture>
           <a href="form.html" class="hero__button button">Подобрать программу</a>
         </div>
