--- a/source/index.html
+++ b/source/index.html
@@ -17,7 +17,7 @@
             <img class="logo__icon" src="img/logo-mobile.svg" alt="Cat Energy" width="34" height="38">
           </picture>
           <svg class="logo__text" width="128" height="24">
-            <use xlink:href="img/sprite.svg#logo-text"></use>
+            <use xlink:href="img/icons/sprite.svg#logo-text"></use>
           </svg>
         </a>
       </div>
@@ -153,7 +153,7 @@
     <div class="page-footer__container">
       <a class="page-footer__logo logo" href="">
         <svg width="128" height="24">
-          <use xlink:href="img/sprite.svg#logo-text"><use>
+          <use xlink:href="img/icons/sprite.svg#logo-text"><use>
         </svg>
       </a>
       <div class="page-footer__social social">
@@ -161,7 +161,7 @@
           <li class="social__item">
             <a href="" class="social__link">
               <svg class="social__icon social__icon--vk" width="30" height="22">
-                <use xlink:href="img/sprite.svg#icon-vkontakte"></use>
+                <use xlink:href="img/icons/sprite.svg#icon-vkontakte"></use>
               </svg>
               <span class="visually-hidden">Мы ВКонтакте</span>
             </a>
@@ -169,7 +169,7 @@
           <li class="social__item">
             <a href="" class="social__link">
               <svg class="social__icon social__icon--inst" width="23" height="23">
-                <use xlink:href="img/sprite.svg#icon-instagram"></use>
+                <use xlink:href="img/icons/sprite.svg#icon-instagram"></use>
               </svg>
               <span class="visually-hidden">Мы в Инстаграмме</span>
             </a>
@@ -177,7 +177,7 @@
           <li class="social__item">
             <a href="" class="social__link">
               <svg class="social__icon social__icon--fb" width="28" height="33">
-                <use xlink:href="img/sprite.svg#icon-facebook"></use>
+                <use xlink:href="img/icons/sprite.svg#icon-facebook"></use>
               </svg>
               <span class="visually-hidden">Мы в Фейсбуке</span>
             </a>
@@ -187,46 +187,12 @@
       <div class="page-footer__copyright copyright">
         <a href="https://htmlacademy.ru/intensive/adaptive" class="copyright__link">HTML Academy
           <svg class="copyright__icon" width="27" height="34">
-            <use xlink:href="img/sprite.svg#icon-htmlacademy"></use>
+            <use xlink:href="img/icons/sprite.svg#icon-htmlacademy"></use>
           </svg>
         </a>
       </div>
     </div>
   </footer>
-  <script>
-    var navMain = document.querySelector('.main-nav');
-    var navToggle = document.querySelector('.main-nav__toggle');
-
-    navMain.classList.remove('main-nav--nojs');
-
-    navToggle.addEventListener('click', function() {
-      if (navMain.classList.contains('main-nav--closed')) {
-        navMain.classList.remove('main-nav--closed');
-        navMain.classList.add('main-nav--opened');
-      } else {
-        navMain.classList.add('main-nav--closed');
-        navMain.classList.remove('main-nav--opened');
-      }
-    });
-
-    var slider = document.querySelector('.range-slider__range');
-    var photoBefore = document.querySelector('.example__photo--before');
-    var showBefore = document.querySelector('.range-slider__button--before');
-    var showAfter = document.querySelector('.range-slider__button--after');
-
-    slider.oninput = function() {
-      photoBefore.style.width = (100 - this.value) + "%";
-    }
-
-    showBefore.onclick = function() {
-      slider.value = 0;
-      photoBefore.style.width = "100%";
-    }
-
-    showAfter.onclick = function() {
-      slider.value = 100;
-      photoBefore.style.width = "0%";
-    }
-  </script>
+  <script src="js/app.min.js"></script>
 </body>
 </html>
