--- a/source/catalog.html
+++ b/source/catalog.html
@@ -250,70 +250,72 @@
         </div>
       </div>
       <div class="catalog__container">
-      <div class="catalog-extra">
-        <ul class="catalog-extra__list">
-          <li class="catalog-extra__item">
-          <div class="product-card-extra">
-            <div class="product-card-extra__name">
-              <span>Сахарозаменитель</span>
+        <div class="catalog-extra">
+          <ul class="catalog-extra__list">
+            <li class="catalog-extra__item">
+            <div class="product-card-extra">
+              <div class="product-card-extra__name">
+                <span>Сахарозаменитель</span>
+              </div>
+              <div class="product-card-extra__weight">
+                <span>1 упаковка (100г)</span>
+              </div>
+              <div class="product-card-extra__price">
+                <span>200 Р.</span>
+              </div>
+              <a href="" class="product-card-extra__link button">Заказать</a>
             </div>
-            <div class="product-card-extra__weight">
-              <span>1 упаковка (100г)</span>
+            </li>
+            <li class="catalog-extra__item">
+            <div class="product-card-extra">
+              <div class="product-card-extra__name">
+                <span>Питьевая вода</span>
+              </div>
+              <div class="product-card-extra__weight">
+                <span>5 литров</span>
+              </div>
+              <div class="product-card-extra__price">
+                <span>50 Р.</span>
+              </div>
+              <a href="" class="product-card-extra__link button">Заказать</a>
             </div>
-            <div class="product-card-extra__price">
-              <span>200 Р.</span>
+            </li> <li class="catalog-extra__item">
+            <div class="product-card-extra">
+              <div class="product-card-extra__name">
+                <span>Молоко</span>
+              </div>
+              <div class="product-card-extra__weight">
+                <span>1 литр</span>
+              </div>
+              <div class="product-card-extra__price">
+                <span>100 Р.</span>
+              </div>
+              <a href="" class="product-card-extra__link button">Заказать</a>
             </div>
-            <a href="" class="product-card-extra__link button">Заказать</a>
+            </li>
+            <li class="catalog-extra__item">
+            <div class="product-card-extra">
+              <div class="product-card-extra__name">
+                <span>Витамины</span>
+              </div>
+              <div class="product-card-extra__weight">
+                <span>1 упаковка (30г)</span>
+              </div>
+              <div class="product-card-extra__price">
+                <span>300 Р.</span>
+              </div>
+              <a href="" class="product-card-extra__link button">Заказать</a>
+            </div>
+            </li>
+          </ul>
+          <div class="product-promo">
+            <p class="product-promo__details">Закажите все<br>и получите чехол для<br>кота в подарок!</p>
           </div>
-          </li>
-          <li class="catalog-extra__item">
-          <div class="product-card-extra">
-            <div class="product-card-extra__name">
-              <span>Питьевая вода</span>
-            </div>
-            <div class="product-card-extra__weight">
-              <span>5 литров</span>
-            </div>
-            <div class="product-card-extra__price">
-              <span>50 Р.</span>
-            </div>
-            <a href="" class="product-card-extra__link button">Заказать</a>
-          </div>
-          </li> <li class="catalog-extra__item">
-          <div class="product-card-extra">
-            <div class="product-card-extra__name">
-              <span>Молоко</span>
-            </div>
-            <div class="product-card-extra__weight">
-              <span>1 литр</span>
-            </div>
-            <div class="product-card-extra__price">
-              <span>100 Р.</span>
-            </div>
-            <a href="" class="product-card-extra__link button">Заказать</a>
-          </div>
-          </li>
-          <li class="catalog-extra__item">
-          <div class="product-card-extra">
-            <div class="product-card-extra__name">
-              <span>Витамины</span>
-            </div>
-            <div class="product-card-extra__weight">
-              <span>1 упаковка (30г)</span>
-            </div>
-            <div class="product-card-extra__price">
-              <span>300 Р.</span>
-            </div>
-            <a href="" class="product-card-extra__link button">Заказать</a>
-          </div>
-          </li>
-        </ul>
-        <div class="product-promo">
-          <p class="product-promo__details">Закажите все<br>и получите чехол для<br>кота в подарок!</p>
         </div>
       </div>
     </section>
     <section class="map map--catalog">
+      <h2 class="visually-hidden">Мы на карте</h2>
       <div class="map__container">
         <div class="map__text">
           <p class="map__title">Приглашаем<br>к сотрудничеству<br>дилеров!</p>
@@ -321,7 +323,7 @@
         </div>
       </div>
       <div class="map__location">
-        <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Afffcda3fd5ea90e254b3828f34175e22abd1b19b3d1539e1065ad215f92c420d&amp;source=constructor" width="100%" height="100%" frameborder="0"></iframe>
+        <iframe class="map__iframe" src="https://yandex.ru/map-widget/v1/?um=constructor%3Afffcda3fd5ea90e254b3828f34175e22abd1b19b3d1539e1065ad215f92c420d&amp;source=constructor"></iframe>
       </div>
     </section>
   </main>
@@ -329,7 +331,7 @@
     <div class="page-footer__container">
       <a class="page-footer__logo logo" href="">
         <svg width="128" height="24">
-          <use xlink:href="img/icons/sprite.svg#logo-text"><use>
+          <use xlink:href="img/icons/sprite.svg#logo-text"></use>
         </svg>
       </a>
       <div class="page-footer__social social">
