--- a/source/form.html
+++ b/source/form.html
@@ -90,7 +90,7 @@
         </div>
         <div class="page-form__row">
           <label class="page-form__label" for="cat-phone">Телефон:*</label>
-          <input class="page-form__input page-form__input--phone" type="phone" id="cat-phone" value="" placeholder="8 (960) 900-60-90">
+          <input class="page-form__input page-form__input--phone" type="tel" id="cat-phone" value="" placeholder="8 (960) 900-60-90">
           <svg class="page-form__icon-phone" width="20" height="20">
             <use xlink:href="img/icons/sprite.svg#icon-phone"></use>
           </svg>
@@ -133,6 +133,7 @@
       </div>
     </form>
     <section class="map">
+      <h2 class="visually-hidden">Мы на карте</h2>
       <div class="map__container">
         <div class="map__text">
           <p class="map__title">Приглашаем<br>к сотрудничеству<br>дилеров!</p>
@@ -140,7 +141,7 @@
         </div>
       </div>
       <div class="map__location">
-        <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Afffcda3fd5ea90e254b3828f34175e22abd1b19b3d1539e1065ad215f92c420d&amp;source=constructor" width="100%" height="100%" frameborder="0"></iframe>
+        <iframe class="map__iframe" src="https://yandex.ru/map-widget/v1/?um=constructor%3Afffcda3fd5ea90e254b3828f34175e22abd1b19b3d1539e1065ad215f92c420d&amp;source=constructor"></iframe>
       </div>
     </section>
   </main>
@@ -148,7 +149,7 @@
     <div class="page-footer__container">
       <a class="page-footer__logo logo" href="">
         <svg width="128" height="24">
-          <use xlink:href="img/icons/sprite.svg#logo-text"><use>
+          <use xlink:href="img/icons/sprite.svg#logo-text"></use>
         </svg>
       </a>
       <div class="page-footer__social social">
