--- a/source/index.html
+++ b/source/index.html
@@ -34,21 +34,20 @@
         </div>
       </nav>
     </div>
-      <section class="hero">
-        <div class="hero__container">
-          <div class="hero__text">
-            <h1 class="hero__title">Функциональное питание для котов</h1>
-            <p class="hero__slogan">Занялся собой? Займись котом!</p>
-          </div>
-          <picture>
-            <source media="(min-width: 1440px)" srcset="img/index-can.webp 1x, img/index-can@2x.webp 2x">
-            <source media="(min-width: 768px)" srcset="img/index-can-tablet.webp 1x, img/index-can-tablet@2x.webp 2x">
-            <img class="hero__img" src="img/index-can-mobile.webp" srcset="img/index-can-mobile@2x.webp 2x" alt="cat energy">
-          </picture>
-          <a href="form.html" class="hero__button button">Подобрать программу</a>
+    <section class="hero">
+      <div class="hero__container">
+        <div class="hero__text">
+          <h1 class="hero__title">Функциональное питание для котов</h1>
+          <p class="hero__slogan">Занялся собой? Займись котом!</p>
         </div>
-      </section>
-    </div>
+        <picture>
+          <source media="(min-width: 1440px)" srcset="img/index-can.webp 1x, img/index-can@2x.webp 2x">
+          <source media="(min-width: 768px)" srcset="img/index-can-tablet.webp 1x, img/index-can-tablet@2x.webp 2x">
+          <img class="hero__img" src="img/index-can-mobile.webp" srcset="img/index-can-mobile@2x.webp 2x" alt="cat energy">
+        </picture>
+        <a href="form.html" class="hero__button button">Подобрать программу</a>
+      </div>
+    </section>
   </header>
   <main class="page__main">
     <section class="programs">
@@ -138,6 +137,7 @@
       </div>
     </section>
     <section class="map">
+      <h2 class="visually-hidden">Мы на карте</h2>
       <div class="map__container">
         <div class="map__text">
           <p class="map__title">Приглашаем<br>к сотрудничеству<br>дилеров!</p>
@@ -145,7 +145,7 @@
         </div>
       </div>
       <div class="map__location">
-        <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Afffcda3fd5ea90e254b3828f34175e22abd1b19b3d1539e1065ad215f92c420d&amp;source=constructor" width="100%" height="100%" frameborder="0"></iframe>
+        <iframe class="map__iframe" src="https://yandex.ru/map-widget/v1/?um=constructor%3Afffcda3fd5ea90e254b3828f34175e22abd1b19b3d1539e1065ad215f92c420d&amp;source=constructor"></iframe>
       </div>
     </section>
   </main>
@@ -153,7 +153,7 @@
     <div class="page-footer__container">
       <a class="page-footer__logo logo" href="">
         <svg width="128" height="24">
-          <use xlink:href="img/icons/sprite.svg#logo-text"><use>
+          <use xlink:href="img/icons/sprite.svg#logo-text"></use>
         </svg>
       </a>
       <div class="page-footer__social social">
