perfect pixel index mobile

--- a/source/index.html
+++ b/source/index.html
@@ -16,7 +16,7 @@
             <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
             <img class="logo__icon" src="img/logo-mobile.svg" alt="Cat Energy" width="34" height="38">
           </picture>
-          <svg class="logo__text" width="128" height="24">
+          <svg class="logo__text" width="101" height="19">
             <use xlink:href="img/icons/sprite.svg#logo-text"></use>
           </svg>
         </a>
@@ -110,7 +110,7 @@
               </div>
             </div>
           </div>
-          <div class="example__photo">
+          <div class="example__photos">
             <div class="example__photo-wrapper">
               <div class="example__slider">
                 <div class="example__photo example__photo--before">
@@ -160,7 +160,7 @@
         <ul class="social__list">
           <li class="social__item">
             <a href="" class="social__link">
-              <svg class="social__icon social__icon--vk" width="30" height="22">
+              <svg class="social__icon social__icon--vk" width="23" height="16">
                 <use xlink:href="img/icons/sprite.svg#icon-vkontakte"></use>
               </svg>
               <span class="visually-hidden">Мы ВКонтакте</span>
@@ -168,7 +168,7 @@
           </li>
           <li class="social__item">
             <a href="" class="social__link">
-              <svg class="social__icon social__icon--inst" width="23" height="23">
+              <svg class="social__icon social__icon--inst" width="16" height="16">
                 <use xlink:href="img/icons/sprite.svg#icon-instagram"></use>
               </svg>
               <span class="visually-hidden">Мы в Инстаграмме</span>
@@ -176,7 +176,7 @@
           </li>
           <li class="social__item">
             <a href="" class="social__link">
-              <svg class="social__icon social__icon--fb" width="28" height="33">
+              <svg class="social__icon social__icon--fb" width="22" height="22">
                 <use xlink:href="img/icons/sprite.svg#icon-facebook"></use>
               </svg>
               <span class="visually-hidden">Мы в Фейсбуке</span>
