--- a/source/index.html
+++ b/source/index.html
@@ -81,7 +81,7 @@
             <p class="steps__descriptions">Замените один-два приема обычной еды на наше функциональное питание.</p>
           </li>
           <li class="steps__item steps__item--time">
-            <p class="steps__descriptions">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+            <p class="steps__descriptions">Уже через месяц наслаждайтесь изменениями к лучшему<br class="br-not-mobile"> вашего питомца!</p>
           </li>
         </ul>
       </div>
