perfect pixel index desktop

--- a/source/index.html
+++ b/source/index.html
@@ -106,7 +106,7 @@
                     <span class="example__result-small">затрачено<br class="br-mobile"> времени</span>
                   </div>
                 </div>
-                <p class="example__bill">Затраты на питание: <span class="example__bill-count">15000 руб.</span></p>
+                <p class="example__bill">Затраты на питание: <span class="example__bill-count">15 000 руб.</span></p>
               </div>
             </div>
           </div>
