perfect pixel form mobile

--- a/source/form.html
+++ b/source/form.html
@@ -16,7 +16,7 @@
             <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
             <img class="logo__icon" src="img/logo-mobile.svg" alt="Cat Energy" width="34" height="38">
           </picture>
-          <svg class="logo__text" width="128" height="24">
+          <svg class="logo__text" width="101" height="19">
             <use xlink:href="img/icons/sprite.svg#logo-text"></use>
           </svg>
         </a>
@@ -70,7 +70,7 @@
             </div>
             <div class="page-form__row">
               <input class="page-form__radio" type="radio" value="3" name="program" id="program3">
-              <label class="page-form__label" for="program3">Не знаю (нужен совет)</label>
+              <label class="page-form__label" for="program3">Не знаю (нужен ваш совет)</label>
             </div>
           </div>
         </div>
@@ -129,7 +129,7 @@
       </div>
       <div class="page-form__container page-form__submit">
         <input class="page-form__button button" type="submit" value="Отправить заявку">
-        <small class="page-form__note">*-Обязательные поля</small>
+        <small class="page-form__note">* &mdash; Обязательные поля</small>
       </div>
     </form>
     <section class="map">
@@ -156,7 +156,7 @@
         <ul class="social__list">
           <li class="social__item">
             <a href="" class="social__link">
-              <svg class="social__icon social__icon--vk" width="30" height="22">
+              <svg class="social__icon social__icon--vk" width="23" height="16">
                 <use xlink:href="img/icons/sprite.svg#icon-vkontakte"></use>
               </svg>
               <span class="visually-hidden">Мы ВКонтакте</span>
@@ -164,7 +164,7 @@
           </li>
           <li class="social__item">
             <a href="" class="social__link">
-              <svg class="social__icon social__icon--inst" width="23" height="23">
+              <svg class="social__icon social__icon--inst" width="16" height="16">
                 <use xlink:href="img/icons/sprite.svg#icon-instagram"></use>
               </svg>
               <span class="visually-hidden">Мы в Инстаграмме</span>
@@ -172,7 +172,7 @@
           </li>
           <li class="social__item">
             <a href="" class="social__link">
-              <svg class="social__icon social__icon--fb" width="28" height="33">
+              <svg class="social__icon social__icon--fb" width="22" height="22">
                 <use xlink:href="img/icons/sprite.svg#icon-facebook"></use>
               </svg>
               <span class="visually-hidden">Мы в Фейсбуке</span>
