perfect pixel form tablet

--- a/source/form.html
+++ b/source/form.html
@@ -132,7 +132,7 @@
         <small class="page-form__note">* &mdash; Обязательные поля</small>
       </div>
     </form>
-    <section class="map">
+    <section class="map map--form">
       <h2 class="visually-hidden">Мы на карте</h2>
       <div class="map__container">
         <div class="map__text">
